<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_background"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProfileAndNavigation.AboutUsActivity"
    android:background="@drawable/aboutus_background">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"

        android:orientation="vertical">

        <include
            layout="@layout/main_toolbar"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/lila2"
            android:text="@string/meet_our_team"
            android:gravity="center"
            android:textSize="24sp"
            android:textStyle="bold"
            android:padding="16dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/developers"
            android:gravity="center"
            android:textSize="16sp"
            android:padding="16dp"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/students_of_medical_informatics"
            android:gravity="center"
            android:textSize="16sp"
            android:padding="16dp"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/email_contact"
            android:gravity="center"
            android:textSize="16sp"
            android:padding="16dp"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textSize="24sp"
            android:textStyle="bold"
            android:text="@string/slogan"
            android:gravity="center"
            android:padding="16dp"
            />

    </LinearLayout>


    <RelativeLayout
        android:layout_width="300dp"
        android:layout_height="match_parent"
        android:background="@android:color/white"
        android:layout_gravity="start">

        <include
            layout="@layout/menu_nawigation_drawer"/>


    </RelativeLayout>


</androidx.drawerlayout.widget.DrawerLayout>