<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:padding="16dp"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/title_textview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/explore_message2"
        android:textStyle="bold"
        android:textSize="24sp"
        android:gravity="center"
        android:layout_marginBottom="32dp" />

    <LinearLayout
        android:id="@+id/button_container"
        android:layout_below="@id/title_textview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="16dp">

        <Button
            android:id="@+id/breast_augmentation_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/fillers"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_marginBottom="16dp"
            android:padding="20dp"/>

        <Button
            android:id="@+id/nose_reconstruction_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/laser_hair_removal"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_marginBottom="16dp"
            android:padding="20dp"/>

        <Button
            android:id="@+id/liposuction_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/microdermabrasion"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_marginBottom="16dp"
            android:padding="20dp"/>

    </LinearLayout>

</RelativeLayout>
