<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".NonSurgicalProceduresDescriptions">

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tabLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#A37CE8"
        app:tabIndicatorColor="#FFFFFF"
        app:tabSelectedTextColor="#FFFFFF">

        <com.google.android.material.tabs.TabItem
            android:id="@+id/tab4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/face" />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/tab5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hair" />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/tab6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/skin" />

    </com.google.android.material.tabs.TabLayout>

    <FrameLayout
        android:id="@+id/frameLayout2"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    </FrameLayout>

</LinearLayout>
