<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_background"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProfileAndNavigation.AccountActivity"
    android:background="@drawable/login_background">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <include
            layout="@layout/main_toolbar" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/lila2"
            android:text="@string/my_account"
            android:gravity="center"
            android:textSize="24sp"
            android:textStyle="bold"
            android:padding="16dp" />

        <TextView
            android:id="@+id/text_name_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:padding="8dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/text_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/lila2"
            android:textSize="18sp"
            android:padding="8dp" />

        <TextView
            android:id="@+id/text_surname_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/surname2"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:padding="8dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/text_surname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/lila2"
            android:textSize="18sp"
            android:padding="8dp" />

        <TextView
            android:id="@+id/text_email_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email2"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:padding="8dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/text_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/lila2"
            android:textSize="18sp"
            android:padding="8dp" />

        <!-- Add these lines for the birthday -->
        <TextView
            android:id="@+id/text_birthday_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/birthday2"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:padding="8dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/text_birthday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/lila2"
            android:textSize="18sp"
            android:padding="8dp" />

    </LinearLayout>

    <RelativeLayout
        android:layout_width="300dp"
        android:layout_height="match_parent"
        android:background="@android:color/white"
        android:layout_gravity="start">

        <include
            layout="@layout/menu_nawigation_drawer" />

    </RelativeLayout>

</androidx.drawerlayout.widget.DrawerLayout>
